fixed header bottom border and spacing

--- a/style.css
+++ b/style.css
@@ -90,16 +90,21 @@ body {
   text-align: center;
 }
 
-.nav-item:is(:not(:last-child)) {
-  margin-bottom: 1.5rem;
-}
-
 .is-active {
   color: var(--accent);
 }
 
 .mobile-nav-toggle {
   display: none;
+}
+
+header {
+  justify-content: space-between;
+  align-items: center;
+  height: 5rem;
+  padding-inline: 3%;
+  border-bottom: 1px solid #747474;
+  margin-block-end: 5.62rem;
 }
 
 @media screen and (max-width: 700px) {
@@ -154,13 +159,18 @@ body {
     outline: 5px solid white;
     outline-offset: 5px;
   }
+
+  .nav-item:is(:not(:last-child)) {
+    margin-bottom: 1.5rem;
+  }
+
+  header {
+    border-bottom: 0;
+    margin-block-end: 0;
+  }
 }
 
-header {
-  justify-content: space-between;
-  align-items: center;
-  height: 5rem;
-}
+
 
 hr {
   background: rgba(11, 11, 11, 0.25);
